# DocShare

./: README.md
Server-CRDT-Rust-main/: Cargo.toml
Server-CRDT-Rust-main/src/: handler.rs  main.rs  room.rs
Server-Laravel-main/: 00_LEIA_PRIMEIRO.md  BUGFIX_REPORT.md  DETALHES_MUDANCAS.md  GUIA_TECNICO_FINAL.md  QUICK_START.md  RESUMO_CORRECOES.md  START_SYNC.sh  STATUS_DIAGNOSTICO.md  TESTE_AGORA.md
Server-Laravel-main/app/Events/: DocumentUpdated.php
Server-Laravel-main/app/Http/Controllers/: DocumentController.php
Server-Laravel-main/app/Models/: Document.php
Server-Laravel-main/app/Services/: CrdtService.php
Server-Laravel-main/database/migrations/: 2026_05_28_181046_create_documents_table.php
Server-Laravel-main/database/seeders/: DatabaseSeeder.php
Server-Laravel-main/public/: app.css  app.js
Server-Laravel-main/resources/js/: app.js
Server-Laravel-main/resources/views/: app.blade.php  nome.blade.php  show.blade.php
Server-Laravel-main/routes/: web.php
