[package]
name    = "collab-crdt"
version = "0.1.0"
edition = "2021"

[dependencies]
axum         = { version = "0.7", features = ["ws"] }
tokio        = { version = "1",   features = ["full"] }
tower-http   = { version = "0.5", features = ["cors"] }
serde        = { version = "1",   features = ["derive"] }
serde_json   = "1"
yrs          = "0.21"
dashmap      = "5"
base64       = "0.22"
futures-util = "0.3"
tracing      = "0.1"
tracing-subscriber = "0.3"